=head1 NAME

Bric::Changes - Bricolage Changes

=head1 VERSION

$LastChangedRevision$

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.8.10 ()

=head2 Bug Fixes

=over

=item *

Eliminated errors inserting array references fetched from image infor while
uploading and saving new image files. Also documented extra methods not
previously documented in L<Bric::App::MediaFunc|Bric::App::MediaFunc>.
Reported by Michael Holden. [David]

=item *

Fixed typo in the final message after an upgrade completes. Reported by Nate
Perry-Thistle. [David]

=item *

Fixed a 1.8.9 upgrade script that adds a foreign key constraint to the
"element_member" table so that it properly tests for the foreign key
constraint before it tries to add it. Reported by Wayne Slavin. [David]

=item *

Refined a few other upgrade scripts, with thanks to Rod Taylor. [David]

=item *

L<Bric::Biz::Person::User|Bric::Biz::Person::User> loads again under
F<bric_queued>. [David]

=back

=head2 Improvements

=over

=item *

Changed (hopefully optimized) the buffer size when reading in files on
media upload. [Scott]

=back

=cut

##############################################################################

=head1 VERSION 1.8.9 (2006-01-23)

=head2 Improvements

=over

=item *

Added missing foreign key constraints and indexes on the C<category_keyword>,
C<story_keyword>, C<media_keyword>, C<element_member>, and
C<media_contributor> tables. This should make keyword lookups, at least, much
faster. [David]

=item *

When a story or media document is published with an expiration date earlier
than the publish date, the UI will now properly report that the document has
been "expired", rather than "published". Thanks to Simon Wilcox for the spot.
[David]

=item *

The Bulk Publish interface in the UI now displays the name of the site
alongside the category if there is more than one site, so as to disambiguate